quilt/tests/snapshots/ui__unknown_annotation_rs_quilt.snap
---
source: quilt/tests/ui.rs
expression: run_check(fixture)
---
$ quilt check unknown_annotation.rs.quilt
exit: 1

unknown_annotation.rs.quilt:   × "klingon" can't be used as Language

Error:   × 1 of 1 file(s) failed to check
