quilt/tests/snapshots/ui__unknown_ground_language_klingon_quilt.snap
---
source: quilt/tests/ui.rs
expression: run_check(fixture)
---
$ quilt check unknown_ground_language.klingon.quilt
exit: 1

unknown_ground_language.klingon.quilt:   × "klingon" can't be used as Language

Error:   × 1 of 1 file(s) failed to check
