quilt/tests/snapshots/ui__unquote_depth_rs_quilt.snap
---
source: quilt/tests/ui.rs
expression: run_check(fixture)
---
$ quilt check unquote_depth.rs.quilt
exit: 1

unquote_depth.rs.quilt:   × unquote depth too high! (source bytes 8..19)
   ╭─[unquote_depth.rs.quilt:1:9]
 1 │ let x = ↙1 + 2↘;
   ·         ───┬───
   ·            ╰── this unquote
   ╰────

Error:   × 1 of 1 file(s) failed to check
